--- a/basics-assignment-1/index.html
+++ b/basics-assignment-1/index.html
@@ -19,7 +19,7 @@
       <!-- 2) Output your age -->
       <p>{{ age }}</p>
       <!-- 3) Output your age + 5 -->
-      <p>{{ addFive() }}</p>
+      <p>{{ calculateAge() }}</p>
       <!-- 4) Output a random number (0 to 1) -->
       <p>Favorite Number: {{ calculateRandom() }}</p>
       <div>
